[tool.poetry]
name = "redis-rate-limiters"
version = "0.1.1"
description = "Distributed rate limiters"
license = "BSD-4-Clause"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
readme = "README.md"
homepage = "https://github.com/otovo/redis-rate-limiters"
repository = "https://github.com/otovo/redis-rate-limiters"
keywords = [
    'async',
    'sync',
    'rate',
    'limiting',
    'limiters',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.11',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [
    { include = "limiters" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = ">1"
redis = ">4.2"

[tool.poetry.group.development.dependencies]
pre-commit = "^3"
black = "^23"
isort = "^5"
printf-log-formatter = "^0.3.0"
coverage = "^7"
pytest = "^7"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-randomly = "*"
pytest-socket = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--allow-hosts=127.0.0.1,::1"
asyncio_mode = "auto"

[tool.black]
line-length = 120
skip-string-normalization = true
quiet = true
preview = true
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover',
    "if __name__ == '__main__':",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "C90", "C4", "T20", "PT", "SIM", "RUF"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.flake8-pytest-style]
fixture-parentheses=false
mark-parentheses=false
parametrize-names-type="csv"

[tool.mypy]
python_version = 3.11
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_no_return = false
show_traceback = true
plugins = ["pydantic.mypy"]

[tool."pydantic-mypy"]
warn_untyped_fields = true
