[project]
name = "redis-rate-limiters"
version = "0.4.5"
description = "Distributed rate limiters"
license = "BSD-4-Clause"
authors = [{ name = "Sondre Lillebø Gundersen", email = "sondrelg@live.no" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "async",
    "sync",
    "rate",
    "limiting",
    "limiters",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic<2",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/otovo/redis-rate-limiters"
Repository = "https://github.com/otovo/redis-rate-limiters"

[dependency-groups]
dev = [
    "pre-commit>=3",
    "ruff>=0.8",
    "printf-log-formatter>=0.3.0",
    "coverage>=7",
    "pytest>=7",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-randomly",
    "pytest-socket",
    "types-redis>=4.5.5.2",
    "mypy>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["limiters"]

[tool.pytest.ini_options]
addopts = "--allow-hosts=127.0.0.1,::1,10.5.0.2,10.5.0.3,10.5.0.4,10.5.0.5,10.5.0.6,10.5.0.7"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "if __name__ == '__main__':",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "C4", "T20", "PT", "SIM", "RUF", "I", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["limiters"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_no_return = false
show_traceback = true
plugins = ["pydantic.mypy"]

[tool."pydantic-mypy"]
warn_untyped_fields = true
